* Update README and add MANUAL.
* A wise player can look at an enemy for a rough estimation of their health.
* Add day/night cycle to all above-ground locations.
* Enable weather effects for more above-ground locations.
* Let monsters also benefit from Detecting status effect.
* Coffins now generate with grave goods and do something when you steal from them.

Fixes:
* Decos no longer lets you steal from him.
* You can no longer leave the Black Market through walls.
* Slightly nerf Black Market.
* Display Willpower in wizard mode secrets.
* Running in wilderness now correctly takes stamina.
* Fix some quest messages not being saved as already displayed.
* Reveal gas traps when you step on them.
* Fix several places where panic immunity or disease immunity was not respected.
* Fix several crafting bugs, hopefully preventing crashes.
* Fix Terra not offering priestly services after you killed Lobh-se.
* Spill more water over a burning player when they pray to Silva, so there's
  a better chance to be extinguished.
* Prevent long strings in config options from overflowing when displayed.
* Prevent building features in owned rooms.
* Explosive liquids can no longer be used to douse flames.
* Wands of webbing were not causing hostility.
* Fix horns of fear causing panic without checking the panic resistance of the victim.
* Remove redundant messages from auto map notes.
* Fix sitting on fountains and drinking from non-water fountains.
* Fix AI not using equipped zappable items.
* Make taming/possessing more powerful creatures scale correctly.
* Fix a bug where boots were not correctly considered for kicking effects.
* Assorted minor fixes and balancing.

Aslona:
* A new main quest will see you trying to bring peace back to the kingdom of
  Aslona, currently in the middle of a civil war.
* Add five new locations.
* Player can now have a ship to sail the oceans of worldmap. This also means
  that they can now bring pets that would normally be unable to cross the ocean