@@ -43,6 +43,8 @@ Changes:
 * Enable weather effects for more above-ground locations.
 * Let monsters also benefit from Detecting status effect.
 * Coffins now generate with grave goods and do something when you steal from them.
+* Hammers are good with the undead.
+* Some monsters now have different diets.
 
 Fixes:
 * Decos no longer lets you steal from him.
